[package]
name = "imgui-examples"
version = "0.1.0"
edition = "2021"
description = "imgui crate examples using Glium backend"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
license = "MIT OR Apache-2.0"
publish = false

[dev-dependencies]
copypasta = "0.8"
glium = { version = "0.34.0", default-features = true }
image = "0.23"

imgui = { version = "0.12", features = ["tables-api"] }
imgui-glium-renderer = "0.12.0"
imgui-winit-support = "0.12.0"