[package]
name = "imgui-examples"
version = "0.1.0"
edition = "2021"
description = "imgui example crate using `glium` + `winit`"
homepage = "https://github.com/imgui-rs/imgui-examples"
repository = "https://github.com/imgui-rs/imgui-examples"
license = "MIT OR Apache-2.0"
publish = false

[dev-dependencies]
copypasta = "0.8"
glium = { version = "0.35.0", default-features = true }
image = "0.23"

imgui = { version = "0.12", features = ["tables-api"] }
imgui-glium-renderer = "0.13.0"
imgui-winit-support = "0.13.0"

# Since the examples aren't included, it's very convenient to
# make a patch here to test various things
# [patch.crates-io]
# imgui = { path = "path/to/local/imgui/here" }