[package]
name = "imgui-examples"
version = "0.1.0"
edition = "2021"
description = "imgui example crate using `glium` + `winit`"
homepage = "https://github.com/imgui-rs/imgui-examples"
repository = "https://github.com/imgui-rs/imgui-examples"
license = "MIT OR Apache-2.0"
publish = false

[dev-dependencies]
copypasta = "0.8"
glium = { version = "0.35.0", default-features = true }
image = "0.23"

imgui-glium-renderer = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-glium-renderer" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs", version = "0.12", features = [
    "tables-api",
] }
imgui-winit-support = { version = "0.13", git = "https://github.com/imgui-rs/imgui-winit-support" }